Bug#51034 NdbApi : Read of blob data with lockmode LM_SimpleRead does not upgrade

Modify NdbApi to upgrade SimpleRead when reading Blob(s)